--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Central India Largest Hackathon</title>
+</head>
+<body>
+	<main>
+	</main>
+	<body>
+	</body>
+	<footer>
+	</footer>
+</body>
+</html>
