--- a/index.html
+++ b/index.html
@@ -2,13 +2,46 @@
 <html>
 <head>
 	<title>Central India Largest Hackathon</title>
+	<link rel="css/bootstrap.min.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
 </head>
 <body>
-	<main>
-	</main>
-	<body>
-	</body>
-	<footer>
-	</footer>
+	
+	<nav class="navbar navbar-inverse" style="background-color :#0099CC;color: white;">
+		<div class="container-fluid">
+    		<div class="navbar-header">
+      			<a class="navbar-brand" href="#">Code-o-tsav</a>
+    		</div>
+   
+  		<ul class="nav navbar-nav navbar-right" >
+      		<li><a href="#">About</a></li>
+      		<li><a href="#">FAQ</a></li>
+      		<li><a href="#">Schedule</a></li>
+      		<li><a href="#">Sponsors</a></li>
+	  		<li><a href="#">Contact Us</a></li>
+    	</ul>
+  		</div>
+	</nav>
+	
+	<div class="container-fluid">
+		<div class="aboutUs-section">
+			About US
+		</div>
+		<div class="faq-section">
+			FAQ
+		</div>
+		<div class="schedule-section">
+			SChedule
+		</div>
+		<div class="sponsors-section">
+			Sponsors
+		</div>
+		<div class="contactUs_section">
+			Contact-US
+		</div>
+	</div>
 </body>
 </html>
