--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Central India Largest Hackathon</title>
-	<link rel="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,26 +22,26 @@
       		<li><a href="#">Schedule</a></li>
       		<li><a href="#">Sponsors</a></li>
 	  		<li><a href="#">Contact Us</a></li>
-    	</ul>
-  		</div>
+    </ul>
+  	</div>
 	</nav>
 	
 	<div class="container-fluid">
-		<div class="aboutUs-section">
-			About US
-		</div>
-		<div class="faq-section">
-			FAQ
-		</div>
-		<div class="schedule-section">
-			SChedule
-		</div>
-		<div class="sponsors-section">
-			Sponsors
-		</div>
-		<div class="contactUs_section">
-			Contact-US
-		</div>
+	<div class="aboutUs-section">
+		About US
+	</div>
+	<div class="faq-section">
+		FAQ
+	</div>
+	<div class="schedule-section">
+		SChedule
+	</div>
+	<div class="sponsors-section">
+		Sponsors
+	</div>
+	<div class="contactUs_section">
+		Contact-US
+	</div>
 	</div>
 </body>
 </html>
